IMPROVE: many minor things

--- a/04.tex
+++ b/04.tex
@@ -16,7 +16,7 @@
 \begin{itemize}
     \ides{Schwaches Gesetz der grossen Zahlen:} Sein $X_1, X_2, \dots$ eine Folge von unabhängigen ZV (oder paarweise unkorreliert), die alle den gleichen EW $E[X_i] = \mu$ und die Var $Var[X_i] = \sigma^2$ haben. Sei: $\overline{X}_n = \frac{1}{n} S_n = \frac{1}{n} \sum_{i=1}^{n} X_i$. Dann konvergiert $\overline{X}_n$ für $n \to \infty$ gegen $\mu$.
         \begin{itemize}
-            \item  D.h. $P[|\overline{X}_n - \mu| > \epsilon] \underset{n \to \infty}{\to} 0, \forall \epsilon > 0$.
+            \item  D.h. $P[|\overline{X}_n - \mu| > \varepsilon] \underset{n \to \infty}{\to} 0, \forall \varepsilon > 0$.
         \end{itemize}
     \ides{Starkes Gesetz der grossen Zahlen:} Seien $X_1, X_2, \dots$ i.i.d. und ihr EW $\mu = E[X_i]$ sei endlich. Für: $\overline{X}_n = \frac{1}{n} S_n = \frac{1}{n} \sum_{i=1}^{n} X_i$, dann gilt: $\overline{X}_n \underset{n \to \infty}{\to} \mu$ \textit{P-fastsicher}.
         \begin{itemize}
