--- a/03.tex
+++ b/03.tex
@@ -90,7 +90,8 @@
             \ides{VF:} $\Phi(t) = \int_{-\infty}^{t} \varphi(s) \mathrm{d}s = \frac{1}{\sqrt{2 \pi}} \int_{-\infty}^{t} e ^{-\frac{s^2}{2}}\mathrm{d}s$
         \end{itemize}
     \item $X \sim \mc{N}(\mu, \sigma^2)$, so ist $\frac{X - \mu}{\sigma} \sim \mc{N}(0, 1)$, also: $F_X(t) = P[X \le t] = P[\frac{X - \mu}{\sigma} \le \frac{t - \mu}{\sigma}] = \Phi(\frac{t - \mu}{\sigma})$
-    \item Falls $X_1, \dots, X_n$, unabhängig und $X_i \sim \mc{N}(\mu_i, \sigma_i^2)$ dann $\sum_{i=1}^n X_i \sim \mc{N}(\sum_{i=1}^n \mu_i, \sum_{i=1}^n \sigma_i^2)$
+    \item Falls $X_1, \dots, X_n$, unabhängig und $X_i \sim \mc{N}(\mu_i, \sigma_i^2)$ dann $\sum_{i=1}^n X_i \sim \mc{N}(\sum_{i=1}^n \mu_i, \sqrt{\sum_{i=1}^n \sigma_i^2})$
+    \item Fläche zwischen $[\mu - \sigma, \mu + \sigma] \approx \frac{2}{3}$
 \end{itemize}
 
 \subsection{Gemeinsame Verteilungen, unabhängige ZV}
