--- a/04.tex
+++ b/04.tex
@@ -28,8 +28,8 @@
             \item $P[S_n^* \le x] \approx \Phi(x)$ für $n$ gross
             \item $S_n^* \overset{\text{approx}}{\sim} \mc{N}(0,1)$ für $n$ gross
             \item $S_n \overset{\text{approx}}{\sim} \mc{N}(n \mu, n \sigma^2)$
+            \item $X \overset{\text{approx}}{\sim} \mc{N}(np, np(1-p))$
             \item $\overline{X}_n \overset{\text{approx}}{\sim} \mc{N}(\mu, \frac{1}{n} \sigma^2)$
             \item Nützliche Umformung: $P[|S_n^*| \le x] \approx \Phi(x) - \Phi(-x) = 2 \Phi(x) - 1$
         \end{itemize}
 \end{itemize}
-
