IMPROVE: Shorten general section and start chapter on new page

--- a/main.tex
+++ b/main.tex
@@ -7,11 +7,13 @@
 \begin{multicols*}{4}
     \raggedright
     \input{00.tex}
+    \clearpage
     \part{Wahrscheinlichkeiten}
     \input{01.tex}
     \input{02.tex}
     \input{03.tex}
     \input{04.tex}
+    \clearpage
     \part{Statistik}
     \input{05.tex}
     \input{06.tex}
