--- a/00.tex
+++ b/00.tex
@@ -48,23 +48,6 @@ $y = \log_a x \iff a^x = x$
     \item $1 + \tan^2 a = \frac{1}{\cos^2 a}$
 \end{itemize}
 
-\subsubsection{Komposition}
-\resizebox{\columnwidth}{!}{
-\begin{tabular}{l l | l l}
-    $\sin(\arccos(x)) =$ & $\sqrt{1 - x^2}$ & $\sin(\arctan(x))=$ & $\frac{x}{\sqrt{1 + x^2} }$\\
-    $\cos(\arctan(x)) =$ & $\frac{1}{\sqrt{ 1 + x^2}}$ & $\cos(\arcsin(x))=$ & $\sqrt{1 - x^2}$\\
-    $\tan(\arcsin(x)) =$ & $\frac{x}{\sqrt{1 - x^2}}$ & $\tan(\arccos(x))$ & $\frac{\sqrt{1 - x^2}}{x}$\\
-\end{tabular}}
-
-\subsubsection{Hyperbolisch}
-\begin{itemize}
-    \item $\sinh = \frac{e^x - e^{-x}}{2}$ \textbullet\ $\cosh = \frac{e^x+e^{-x}}{2}$ \textbullet\ $\tanh = \frac{\sinh(x)}{\cosh(x)}$
-
-    \item $\cosh^2(x) - \sinh^2(x) = 1$
-    \item $\sinh(a + b) = \sinh(a)\cosh(b) + \cosh(a)\sinh(b)$
-    \item $\cosh(a + b) = \cosh(a)\cosh(b) + \sinh(a)\sinh(b)$
-\end{itemize}
-
 \subsubsection{Winkel}
 \resizebox{\columnwidth}{!}{
 \begin{tabular}{c c c c || c c c c}
@@ -95,26 +78,10 @@ $y = \log_a x \iff a^x = x$
                                     &                               & $\arctan(\sqrt{3}) = \frac{\pi}{3}$\\
 \end{tabular}}
 
-\begin{itemize}
-    \item $\arccos(x) = \frac{\pi}{2} - \arcsin(x)$
-\end{itemize}
-
-\subsubsection{Reduktion}
-\resizebox{\columnwidth}{!}{\begin{tabular}{l | l | l}
-    $\sin \frac{\pi}{2} - a = \cos a$ & $\cos \frac{\pi}{2} - a = \sin a$ & $\tan \frac{\pi}{2} - a = \frac{1}{\tan a}$\\
-    $\sin \frac{\pi}{2} + a = \cos a$ & $\cos \frac{\pi}{2} + a = -\sin a$ & $\tan \frac{\pi}{2} + a = \frac{-1}{\tan a}$\\
-    $\sin \pi - a = \sin a$ & $\cos \pi - a = -\cos a$ & $\tan \pi - a = -\tan a$\\
-    $\sin \pi + a = -\sin a$ & $\cos \pi + a = -\cos a$ & $\tan \pi + a = \tan a$\\
-    $\sin 2\pi -a = -\sin a$ & $\cos 2\pi - a = \cos a$ & $\tan 2 \pi - a = -\tan a$\\
-    $\sin -a = -\sin a$ & $\cos - a = \cos a$ & $\tan - a = -\tan a$\\
-\end{tabular}}
-
 \subsection{Sonstiges}
 \begin{itemize}
     \ides{Mitternacht:} $x_{1 / 2} = \frac{-b \pm \sqrt{b^2 - 4ac}}{2a}$
     \item $\sqrt{i} = \frac{\sqrt{2}}{2} + i \frac{\sqrt{2}}{2}$
-    \ides{Ellipse Gleichung:} $\frac{x^2}{a^2} + \frac{y^2}{b^2} = 1$
-    \ides{Ellipse Volumen:} $\pi a b$
 \end{itemize}
 
 \subsection{Komplexe Zahlen}
@@ -281,10 +248,6 @@ $z = x + iy \iff z = r(\cos \gamma + i \sin \gamma) \overset{Euler}{=} z = r e^{
     $\frac{-4x}{(x^2 + 1)^3}$                                         & $\frac{1}{(1 + x^2)^2}$ & $\frac{x}{2x^2 + 2} + \frac{\arctan(x)}{2}$\\
                                                                       & $\frac{u'(x)}{u(x)}$    & $\ln |u(x)|$\\
                                                                       & $u'(x) \cdot u(x)$      & $\frac{1}{2}(u(x)^2)$\\
-\end{tabular}}
-
-\resizebox{\columnwidth}{!}{
-\begin{tabular}{l | l | l}
     $\frac{-x}{\sqrt{a^2 - x^2}}$                                     & $\sqrt{a^2 - x^2}$      & $\frac{a^2 \arcsin(\frac{x}{|a|})+ x \sqrt{a^2 - x^2}}{2}$\\
     $\frac{x}{\sqrt{x^2 + a^2}}$                                      & $\sqrt{a^2 + x^2}$      & $\frac{a^2 \ln(| \sqrt{x^2 + a^2} +x|) + x \sqrt{a^2 + x^2}}{2}$\\
     $x^x (1 + \ln x)$                                                 & $x^x$                   & \\
@@ -299,9 +262,10 @@ $z = x + iy \iff z = r(\cos \gamma + i \sin \gamma) \overset{Euler}{=} z = r e^{
     $\frac{1}{2x+2} - \frac{1}{2x - 2}$                               & $\arctanh(x)$           & \\
 \end{tabular}}
 
+
 \subsection{Kombinatorik}
-\begin{itemize}
-    \item Anzahl Permutation ohne Wiederholung: $n!$
-    \item Anzahl der Kombinationen ohne Wiederholung: ${n\choose k} = \frac{n!}{k!(n - k)!}$
-    \item Anzahl Variationen mit Wiederholung: $n^m$
-\end{itemize}
+\begin{tabular}{l | c | c}
+    & geordnet & ungeordnet\\\hline
+    mit zurücklegen & $n^k$ & ${n + k - 1 \choose k}$\\
+    ohne zurücklegen & $\frac{n!}{(n - k)!}$ & ${n \choose k} = \frac{n!}{k!(n - k)!}$
+\end{tabular}
