--- a/07.tex
+++ b/07.tex
@@ -23,11 +23,15 @@
         \ides{Fehler $\mathbf{2.}$ Art:} Hypothese zu unrecht nicht verworfen: Passiert für $\vartheta \in \Theta_A$ und $T \notin K$. $P_\vartheta[T \notin K] = 1 - P_\vartheta[T \in K]$ für $\vartheta \in \Theta_A$ ist die WS für Fehler $2.$ Art.
     \ides{Signifikanzniveau:} Grundsätzlich möchte man $\vartheta \mapsto P_\vartheta[T \in K]$ auf $\Theta_0$ möglichst klein und auf $\Theta_A$ möglichst gross haben. Da diese meist stetig ist und $\Theta_0$ und $\Theta_A$ meist nebeneinander liegen ist ein gleichzeitiges min-/maximieren von $\Theta_0/\Theta_A$ nicht möglich. Deshalb gibt es folgendes zweistufiges Vorgehen:
         \begin{itemize}
-            \item[1)] Wähle \textbf{Signifikanzniveau} $\alpha \in (0, 1)$ und sorge für $\sup_{\vartheta \in \Theta_0} P_\vartheta[T \in K] \le \alpha$ (d.h. man kontrolliere WS für Fehler 1. Art durch $\alpha$).
+            \item[1)] Wähle \textbf{Signifikanzniveau} $\alpha \in (0, 1)$ und sorge für $\sup_{\vartheta \in \Theta_0} P_\vartheta[T \in K] \le \alpha$
                 \begin{itemize}
-                    \item $1 - \alpha$ ist die Wahrscheinlichkeit, dass $H_0$ beibehalten wird
+                    \item D.h. man kontrolliere WS für Fehler 1. Art durch $\alpha$
+                    \item $1 - \alpha$ ist die Wahrscheinlichkeit, dass $H_0$ unter $P_{\vartheta_0}$ beibehalten wird
                 \end{itemize}
-            \item[2)] Versuche \textbf{Macht} des Tests $\beta: \Theta_A \to [0, 1], \beta(\vartheta) := P_\vartheta[T \in K]$ möglichst gross zu bekommen, soweit möglich (d.h. WS für Fehler 2. Art möglich klein).
+            \item[2)] Versuche \textbf{Macht} des Tests $\beta: \Theta_A \to [0, 1], \beta(\vartheta) := P_\vartheta[T \in K]$ möglichst gross zu bekommen, soweit möglich
+                \begin{itemize}
+                    \item D.h. WS für Fehler 2. Art möglich klein
+                \end{itemize}
             \item Dieses asymmetrische Vorgehen macht es schwieriger die Hypothese zu verwerfen als beizubehalten. Ein seriöser Test wird deshalb immer die Negation der gewünschten Aussage benutzen.
         \end{itemize}
 \end{itemize}
