NEW: Appendix with few umformungen and stuff

--- a/main.tex
+++ b/main.tex
@@ -20,4 +20,8 @@
     \input{07.tex}
     \input{08.tex}
 \end{multicols*}
+\begin{multicols*}{3}
+    \part{Appendix}
+    \input{09.tex}
+\end{multicols*}
 \end{document}
