IMPROVE: minor notes and fixes

--- a/03.tex
+++ b/03.tex
@@ -81,7 +81,7 @@
 \end{cases}$
     \item $E[X] = \int_{0}^{\infty} \lambda x e^{-\lambda x} \mathrm{d}x = \frac{1}{\lambda}$
     \item $Var[X] = \int_{0}^{\infty} (x - \frac{1}{\lambda})^2 \lambda e^{-\lambda x} \mathrm{d}x = \frac{1}{\lambda^2}$
-    \ides{Gedächnislosigkeit:} $P[X > t + s \mid X > s] = P[X > t]$
+    \ides{Gedächtnislosigkeit:} $P[X > t + s \mid X > s] = P[X > t]$
 \end{itemize}
 
 \subsubsection{Normalverteilung}
