--- a/07.tex
+++ b/07.tex
@@ -26,6 +26,7 @@
             \item[1)] Wähle \textbf{Signifikanzniveau} $\alpha \in (0, 1)$ und sorge für $\sup_{\vartheta \in \Theta_0} P_\vartheta[T \in K] \le \alpha$
                 \begin{itemize}
                     \item D.h. man kontrolliere WS für Fehler 1. Art durch $\alpha$
+                    \item $\alpha$ wird kleiner $\implies$ WS für Fehler 1. Art wird kleiner $\implies$ Verwerfungsbereich wird kleiner $\implies$ Fehler 2. Art wird grösser $\implies$ Macht des Tests wird grösser
                     \item $1 - \alpha$ ist die Wahrscheinlichkeit, dass $H_0$ unter $P_{\vartheta_0}$ beibehalten wird
                 \end{itemize}
             \item[2)] Versuche \textbf{Macht} des Tests $\beta: \Theta_A \to [0, 1], \beta(\vartheta) := P_\vartheta[T \in K]$ möglichst gross zu bekommen, soweit möglich
