--- a/02.tex
+++ b/02.tex
@@ -146,7 +146,7 @@
     \item $X = \inf \{i \in \N \mid A_i \text{ tritt ein}\} = \inf \{i \in \N \mid Y_i = 1\}$
     \item $p_X(k) = P[X = k] = p(1 - p)^{k - 1}, \ k = 1, 2, \dots$
     \item $P[X > k] = (1 - p)^k$
-    \item $P[X > k + n | X > n] = P[X > k]$
+    \ides{Gedächtnislosigkeit:} $P[X > k + n | X > n] = P[X > k]$
     \item $\mc{W}(X) = \N$
     \item $E[X] = \sum_{l=0}^{\infty} P[X > l] = \sum_{l=0}^{\infty} (1 - p)^l = \frac{1}{p}$
     \item $Var[X] = \frac{1 - p}{p^2}$
