--- a/08.tex
+++ b/08.tex
@@ -4,8 +4,16 @@
 Wir suchen aus einer Familie $(P_\vartheta)_{\vartheta \in \Theta}$ von Modellen eines, das zu unseren Daten $x_1, \dots, x_n$ passt. Ein Schätzer für $\vartheta$ gibt uns dabei einen einzelnen zufälligen möglichen Parameterwert. Weil es schwierig ist, mit diesem einen Wert dem richtigen Parameter zu treffen, suchen wir nun stattdessen eine Teilmenge des Parameterbereichs, die hoffentlich den wahren Parameter enthält.
 \begin{itemize}
     \ides{Konfidenzbereiche (KB):} für $\vartheta$ zu Daten $x_1, \dots, x_n$ ist eine Menge $C(x_1, \dots, x_n) \subseteq \Theta$; in den meisten Fällen ist das ein Intervall, dessen Endpunkte von $x_1, \dots, x_n$ abhängen. Ersetzen wir die Daten $x_1, \dots, x_n$ durch die sie generierende ZV so ist $\overset{\sim}{C} := C(X_1, \dots, X_n)$ also eine zufällige Teilmenge von $\Theta$, mit Realisierung $\overset{\sim}{C}(\omega) = C(X_1(\omega), \dots, X_n(\omega))$ bei einem festen $\omega$. Ein solches $C$ heisst KB zum Niveau $1 - \alpha$, falls gilt: $P_\vartheta[C(X_1, \dots, X_n) \ni \vartheta] \ge 1 - \alpha \quad \forall \vartheta \in \Theta$, d.h. in jedem Modell erwischt man den Parameter mit grosser WS.
-    \ides{Bei Bekannter Var} für $\mu$ zum Niveau $1 - \alpha$: $C(X_1, \dots, X_n) = \left[ \overline X_n - t_{n - 1, 1 - \frac{\alpha}{2}} \frac{S}{\sqrt{n}}, \overline X_n + t_{n - 1, 1 - \frac{\alpha}{2}} \frac{S}{\sqrt{n}} \right]$
-    \ides{Bei Unbekannter Var} $\sigma^2$ zum Niveau $1 - \alpha$: $C(X_1, \dots, X_n) = \left[\frac{(n - 1)S^2}{\chi_{n - 1, 1 - \frac{\alpha}{2}}^2}, \frac{(n - 1)S^2}{\chi_{n - 1, \frac{\alpha}{2}}^2} \right]$
+    \ides{KB für $\mathbf{\sigma^2}:$} zum Niveau $1 - \alpha$
+        \begin{itemize}
+            \ides{$\mathbf{\mu}$ unbekannt:} $C(X_1, \dots, X_n) = \left[\frac{(n - 1)S^2}{\chi_{n - 1, 1 - \frac{\alpha}{2}}^2}, \frac{(n - 1)S^2}{\chi_{n - 1, \frac{\alpha}{2}}^2} \right]$
+            \ides{$\mathbf{\mu}$ bekannt:} \todo{to be found}
+        \end{itemize}
+    \ides{KB für $\mathbf{\mu}$:} zum Niveau $1 - \alpha$
+        \begin{itemize}
+            \ides{$\mathbf{\sigma}$ unbekannt:} $C(X_1, \dots, X_n) = \left[ \overline X_n - t_{n - 1, 1 - \frac{\alpha}{2}} \frac{S}{\sqrt{n}}, \overline X_n + t_{n - 1, 1 - \frac{\alpha}{2}} \frac{S}{\sqrt{n}} \right]$
+            \ides{$\mathbf{\sigma}$ bekannt:} $C(X_1, \dots, X_n) = \left[ \overline X_n - z_{1 - \frac{\alpha}{2}} \frac{\sigma}{\sqrt{n}}, \overline X_n + z_{1 - \frac{\alpha}{2}} \frac{\sigma}{\sqrt{n}} \right]$
+        \end{itemize}
 \end{itemize}
 
 \subsection{Konfidenzbereiche - Test - Dualität}
