IMPROVE: minor additions and fixes

--- a/09.tex
+++ b/09.tex
@@ -59,5 +59,6 @@
 
 \subsection{Likelihood Schätzer}
 \begin{itemize}
-    \ides{Gesucht:} Maximum-Likelihood Schätzer für $X_1, \dots, X_n, X_i \sim \text{Poisson}(\lambda)$ ist $T = \frac{1}{n} \sum_{i=1}^n X_i$
+    \ides{Gesucht:} Maximum-Likelihood Schätzer für $\lambda$ für $X_1, \dots, X_n$, i.i.d. $X_i \sim \text{Poisson}(\lambda)$ ist $T = \frac{1}{n} \sum_{i=1}^n X_i$
+    \ides{Gesucht:} Maximum-Likelihood Schätzer für $p$ für $X_1, \dots, X_n$, i.i.d. $X_i \sim \text{Be}(p)$ ist $T = \frac{1}{n} \sum_{i=1}^n X_i$
 \end{itemize}
