--- a/main.tex
+++ b/main.tex
@@ -21,6 +21,7 @@
     \input{08.tex}
 \end{multicols*}
 \begin{multicols*}{3}
+    \raggedcolumns
     \part{Appendix}
     \input{09.tex}
 \end{multicols*}
