IMPROVE: minor things

--- a/04_Perception.tex
+++ b/04_Perception.tex
@@ -127,7 +127,7 @@
     \ides{Pinhole Approximation:} $z \gg f \implies f \approx e$
         \begin{itemize}
             \item I.e. lens is approximated as pinhole at distance $f$ from image plane
-            \item If follows that $B = \frac{f}{z}B$
+            \item If follows that $B' = \frac{f}{z}B$
         \end{itemize}
     \includegraphics[width=\linewidth]{./Figures/04_ThinLensEquation.png}
 \end{itemize}
