--- a/cheatsheet.sty
+++ b/cheatsheet.sty
@@ -32,7 +32,7 @@
 \newcommand{\icon}{\item[-]}
 \newcommand{\ides}[1]{\item \textbf{#1}}
 
-%\usepackage{extsizes}
+\usepackage{extsizes}
 
 \usepackage{geometry}
 \geometry{paper=a4paper,left=4.5mm, right=4.5mm, top=4.5mm, bottom=6mm, landscape, nohead, nofoot}
